--- a/components/features/feature-item/FeatureItem.module.css
+++ b/components/features/feature-item/FeatureItem.module.css
@@ -30,7 +30,7 @@
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 32px;
 }
 
 @media (max-width: 769px) {
