--- a/components/layout/footer/footer-form/FooterForm.module.css
+++ b/components/layout/footer/footer-form/FooterForm.module.css
@@ -9,6 +9,10 @@
   padding-left: 10px;
 }
 
+.footerForm input::placeholder {
+  color: #c1c8d6;
+}
+
 @media (max-width: 350px) {
   .footerForm {
     flex-direction: column;
