--- a/components/layout/header/copy/Copy.module.css
+++ b/components/layout/header/copy/Copy.module.css
@@ -13,6 +13,7 @@
 
 .copy h1 {
   font-size: 64px;
+  font-weight: bold;
   line-height: 100%;
   letter-spacing: -0.03em;
   color: #2b2f35;
